--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "node-lion-lib",
   "version": "1.1.0",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/veldymanov/node-lion-lib.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
